@@ -35,7 +35,8 @@ dnl  ---------------
 dnl | documentation |---------------------------------------------------------
 dnl  ---------------
 
-GNOME_DOC_INIT
+GNOME_DOC_INIT([],[have_gdu=1],[have_gdu=0])
+AM_CONDITIONAL(WITH_GNOME_DOC_UTILS,test "x$have_gdu" = "x1")
 
 dnl  ------------------
 dnl | platform support |------------------------------------------------------
